[gd_scene load_steps=13 format=2]

[ext_resource path="res://enemy/HolsterWeaponReaper-Sheet.png" type="Texture" id=1]
[ext_resource path="res://game/walk.tres" type="Animation" id=2]
[ext_resource path="res://game/lil enemy.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 15.7109 )

[sub_resource type="Animation" id=2]
resource_name = "holding"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 29, 29, 29, 29 ]
}

[sub_resource type="Animation" id=3]
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24, 25, 26, 27, 28, 29 ]
}

[sub_resource type="Animation" id=4]
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=5]
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 63 ]
}

[sub_resource type="Animation" id=6]
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17, 18, 19 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 152.173, 88.5319 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 218.684, 136.484 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 27.0154, 23.3293 )

[node name="ground hard" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
vframes = 8
frame = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/holding = SubResource( 2 )
anims/idle = ExtResource( 2 )
"anims/pulling out" = SubResource( 3 )
"anims/putting away" = SubResource( 4 )
anims/run = SubResource( 5 )
anims/swing = SubResource( 6 )

[node name="chasing" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chasing"]
visible = false
position = Vector2( -0.227229, -53.0272 )
shape = SubResource( 7 )

[node name="seeing" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="seeing"]
visible = false
position = Vector2( 2.50677, -49.6886 )
shape = SubResource( 8 )

[node name="swipe" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="swipe"]
position = Vector2( 0.471924, 1.52588e-05 )
shape = SubResource( 9 )

[connection signal="body_entered" from="chasing" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="chasing" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="seeing" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="seeing" to="." method="_on_Area2D2_body_exited"]
[connection signal="body_entered" from="swipe" to="." method="_on_swipe_body_entered"]
